# deric

./: README.md  pyproject.toml
.github/workflows/: codequalitycheck.yml  release-to-pypi.yml  tag-to-test-pypi.yml
deric/: __init__.py
deric/types/: __init__.py  enum_by_name.py
deric/utils/: logging.py  ray.py
example/: simple_app.py
tests/: test_config.py  test_extra.py  test_logging.py  test_simple.py  test_subcommands.py  test_types.py
