[tool.poetry]
name = "deric"
version = "0.1.0"
description = "Declarative rich CLI"
authors = ["Carlo Antonio Venditti <c.a.venditti@pm.me>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
tqdm = "^4.65.0"
pydantic = "^1.10.6"
rich = "^13.3.2"
tomlkit = "^0.11.6"


[tool.poetry.group.dev.dependencies]
bpython = "^0.24"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
