[tool.poetry]
name = "deric"
version = "0.2.0"
description = "Declarative rich CLI"
authors = ["Carlo Antonio Venditti <c.a.venditti@pm.me>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.4.0"
rich = "^13.6.0"
tomlkit = "^0.11.6"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
pytest-cov = "^4.0.0"
mock = "^5.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
